--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Reporte de radiobases",
   "main": "server.js",
   "scripts": {
+    "install" : "npm install",
     "server": "nodemon server.js --ignore 'client/'",
+    "clientInstall": "npm run install --prefix client",
     "client": "npm run serve --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm run install\" \"npm run clientInstall\" \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
