--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server.js --ignore 'client/'",
     "clientInstall": "npm run install --prefix client",
     "client": "npm run serve --prefix client",
-    "start": "concurrently \"npm run install\" \"npm run clientInstall\" \"npm run server\" \"npm run client\""
+    "start":  "\"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
