--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "node server.js --ignore 'client/'",
-    "client": "npm run serve --prefix client",
+    "client": "npm run start --prefix client",
     "start": "concurrently  \"npm run server\" \"npm run client\""
   },
   "repository": {
