--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "NODE_ENV=development && npm run client-install && npm run client-build && NODE_ENV=production",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js",
+    "postinstall":  "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi "
   },
   "dependencies": {
+    "express": "^4.17.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "@vue/cli-service": "~4.5.0"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
