--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js",
-    "postinstall":  "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi "
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
